2004-02-03	blytkerchan
	* strlwr.c: new file
	* AUTHORS: ditto
