@@ -1,0 +1,5 @@
+noinst_LTLIBRARIES=libreplace.la
+libreplace_la_SOURCES=
+libreplace_la_LIBADD=$(LTLIBOBJS)
+EXTRA_DIST=memcmp.c strlwr.c strlwr.h
+
